Update: Refactor UI to FlowLayoutPanel, Add Macro Library, Support Image Context, Fix Bugs

--- a/ExcelSP2/ExcelSP2/ExcelSP2.csproj
+++ b/ExcelSP2/ExcelSP2/ExcelSP2.csproj
@@ -146,6 +146,10 @@
           <Private>False</Private>
           <EmbedInteropTypes>true</EmbedInteropTypes>
         </Reference>
+        <Reference Include="Microsoft.Vbe.Interop, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c">
+          <Private>False</Private>
+          <EmbedInteropTypes>true</EmbedInteropTypes>
+        </Reference>
       </ItemGroup>
     </When>
     <Otherwise>
