--- a/ExcelSP2/ExcelSP2/ExcelSP2.csproj
+++ b/ExcelSP2/ExcelSP2/ExcelSP2.csproj
@@ -112,6 +112,12 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Web.Extensions" />
+    <Reference Include="Microsoft.VisualBasic" />
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
+    <Reference Include="WindowsBase" />
+    <Reference Include="System.Xaml" />
+    <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Office.Tools.v4.0.Framework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
@@ -221,13 +227,26 @@
     <Compile Include="ThisAddIn.Designer.cs">
       <DependentUpon>ThisAddIn.Designer.xml</DependentUpon>
     </Compile>
-    <Compile Include="TaskPaneControl.cs" />
+    <Compile Include="TaskPaneControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="TaskPaneControl.Designer.cs">
       <DependentUpon>TaskPaneControl.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="TaskPaneControl.resx">
       <DependentUpon>TaskPaneControl.cs</DependentUpon>
     </EmbeddedResource>
+    <Compile Include="Models.cs" />
+    <Compile Include="TaskPaneHostControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="WpfTaskPaneControl.xaml.cs">
+      <DependentUpon>WpfTaskPaneControl.xaml</DependentUpon>
+    </Compile>
+    <Page Include="WpfTaskPaneControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <PropertyGroup>
