feat: add comprehensive settings window with prompt/macro management and advanced LLM config

--- a/ExcelSP2/ExcelSP2/ExcelSP2.csproj
+++ b/ExcelSP2/ExcelSP2/ExcelSP2.csproj
@@ -240,6 +240,13 @@
     <Compile Include="TaskPaneHostControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="SettingsWindow.xaml.cs">
+      <DependentUpon>SettingsWindow.xaml</DependentUpon>
+    </Compile>
+    <Page Include="SettingsWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Compile Include="WpfTaskPaneControl.xaml.cs">
       <DependentUpon>WpfTaskPaneControl.xaml</DependentUpon>
     </Compile>
