Add Chinese localization, fix UI icons, and resolve compilation errors

--- a/ExcelSP2/ExcelSP2/ExcelSP2.csproj
+++ b/ExcelSP2/ExcelSP2/ExcelSP2.csproj
@@ -205,6 +205,9 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.zh-CN.resx">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
